fix iframe stealing focus, fix scrollbar in chrome

--- a/css/main.css
+++ b/css/main.css
@@ -34,9 +34,6 @@ article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section {
 	display: block;
 }
-html {
-	scrollbar-width: none;
-}
 body {
 	line-height: 1em;
 }
@@ -224,4 +221,11 @@ a.button {
 .github-link {
 	width: 18px;	
 	height: 18px;	
+}
+html {
+	-ms-overflow-style: none;  /* Internet Explorer 10+ */
+	scrollbar-width: none;  /* Firefox */
+}
+html::-webkit-scrollbar { 
+	display: none;  /* Safari and Chrome */
 }
